RM-2339 (Re-style banner as per UX review - file plan, document library view)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107025 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/components/documentlibrary/dm-actions.css
+++ b/rm-share/source/web/components/documentlibrary/dm-actions.css
@@ -69,3 +69,15 @@
 {
    width: 300px;
 }
+
+.classified-banner
+{
+   border: 1px solid #da4453;
+   border-radius: 5px;
+   clear: left;
+   margin-bottom: 4px;
+   padding: 5px 15px 3px 15px;
+   color: #da4453;
+   font-family: helvatica;
+   display: inline-block;
+}
