RM-2339: Fix typo in font name and add in generic fall back.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107450 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/components/documentlibrary/dm-actions.css
+++ b/rm-share/source/web/components/documentlibrary/dm-actions.css
@@ -78,6 +78,6 @@
    margin-bottom: 4px;
    padding: 5px 15px 3px 15px;
    color: #da4453;
-   font-family: helvatica;
+   font-family: Helvetica, sans-serif;
    display: inline-block;
 }
