--- a/rm-share/source/web/rm/components/console/security-clearance.css
+++ b/rm-share/source/web/rm/components/console/security-clearance.css
@@ -13,14 +13,8 @@
    padding-top: 15px;
 }
 
-.security-clearance-user-name
-{
-   display: block;
-   padding-top: 10px;
-   padding-left: 10px;
-}
-
-.security-clearance-user-classification-level
+.security-clearance-user-name .inner,
+.alfresco-renderers-PublishingDropDownMenu.security-clearance-user-classification-level
 {
    display: block;
    padding-top: 10px;
