--- a/rm-share/source/web/js/alfresco/rm/services/css/ClassifyService.css
+++ b/rm-share/source/web/js/alfresco/rm/services/css/ClassifyService.css
@@ -4,7 +4,8 @@
 }
 
 /* Add some space under the form tabs */
-#CLASSIFY_CONTENT_DIALOG .dijitTabContainerTop-container {
+#CLASSIFY_CONTENT_DIALOG .dijitTabContainerTop-container,
+#EDIT_CLASSIFIED_CONTENT_DIALOG .dijitTabContainerTop-container {
     padding-top: @standard-line-height;
 }
 
@@ -12,7 +13,8 @@
 /* This code is copied from BaseFormControl.css, with the following modifications: */
 /*   - addition of ID so the fix applies only to classification dialog */
 /*   - removal of the ">" between form and BaseFormControl class in order to apply styles to controls inside a layout container */
-#CLASSIFY_CONTENT_DIALOG.alfresco-dialog-AlfDialog .dialog-body .alfresco-forms-Form.root-dialog-form > form .alfresco-forms-controls-BaseFormControl {
+#CLASSIFY_CONTENT_DIALOG.alfresco-dialog-AlfDialog .dialog-body .alfresco-forms-Form.root-dialog-form > form .alfresco-forms-controls-BaseFormControl,
+#EDIT_CLASSIFIED_CONTENT_DIALOG.alfresco-dialog-AlfDialog .dialog-body .alfresco-forms-Form.root-dialog-form > form .alfresco-forms-controls-BaseFormControl {
     min-width: @dialog-control-section +2;
 
     .description-row > .description {
