RM-2548: Admin's security clearance should not be editable.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@113335 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/console/security-clearance.css
+++ b/rm-share/source/web/rm/components/console/security-clearance.css
@@ -14,7 +14,8 @@
 }
 
 .security-clearance-user-name .inner,
-.alfresco-renderers-PublishingDropDownMenu.security-clearance-user-classification-level
+.alfresco-renderers-PublishingDropDownMenu.security-clearance-user-classification-level,
+.alfresco-renderers-Property.security-clearance-user-classification-level
 {
    display: block;
    padding-top: 10px;
